Fixed spacing issue between date and lead

--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -163,7 +163,6 @@ article
   color red
 
 .blog-post-lead
-  padding-top 1em
   font-weight 400
   font-style italic
   font-size 28px
